# qa_guru_python_3_20

./: .gitignore  config.browserstack.env  config.emulation.env  config.py  config.real.env  pyproject.toml
tests/: conftest.py  test_mobile_application.py  test_mobile_browserstack.py  test_mobile_emulator.py  test_mobile_real.py
utils/: attachments.py
